--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 .drawer-side a.active {
-    color: white;
+    color: rgb(145, 87, 32);
+    border-bottom: 4px solid darkgreen;
   }
   .drawer-side a {
     background-color: transparent;
