--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,19 @@
     
   }
 
-  .container{
+  /* .container{
     display: flex;
   }
   .container .paragraph{
     margin-bottom: 26px;
     text-align:start;
   }
-  .container .paragraph .button{
-    margin-bottom: 10px;
-  }
+  @media screen and (min-width:440px){
+    .container .paragraph .button{
+      display: block;
+    }
+  } */
+
+  .thumbs{
+    display: none;
+}
