--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,8 @@ display: none;
 .carousel-status{
   display: none;
 }
+
+/* Blog section */
+/* .blog-tag p{
+  font-family: 'Raleway', sans-serif;
+} */
